opam-version: "2.0"
synopsis: "Redirect channels"
description: "Redirect channels to files, strings..."
maintainer: "Thierry Martinez <Thierry.Martinez@inria.fr>"
authors: "Thierry Martinez <Thierry.Martinez@inria.fr>"
homepage: "https://gitlab.inria.fr/tmartine/redirect"
bug-reports: "https://gitlab.inria.fr/tmartine/redirect/issues"
license: "BSD"
dev-repo: "git+https://gitlab.inria.fr/tmartine/redirect.git"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "stdcompat" {>= "9"}
  "ocaml" {>= "4.03" & < "4.08.0"}]
